syntax = "proto3";

option go_package = "/protos/user";

package user;

service userAuth {
    rpc register(regReq) returns (apiRes);
    rpc login(loginReq) returns (apiRes);
    rpc logout(logoutReq) returns (apiRes);
}

message regReq {
    string email = 1;
    string username = 2;
    string password = 3;
}

message loginReq{
    string username = 1;
    string password = 2;
}

message logoutReq{}

message apiRes{
    int32 resCode = 1;
    string message = 2;
}